# Rigid-Body-CA

./: CMakeLists.txt  build.sh  graphics.c  graphics.h  grid.c  grid.h  init.c  init.h  input.c  input.h  lib_install_commands.md  life.c  life.h  main.c  profile.sh  run.sh  utility.c  utility.h
